# tips

./: .gitignore  CLAUDE.md  SOCIAL_MEDIA.md  backlog.md  pyproject.toml  tip_template.md
examples/: pii.py  tip001.py  tip003.py  tip038.py  tip039.py  tip040.py  union_structure.py
scripts/: README.md  extract_tips_metadata.py  generate_images.py  prepare_social_post.py  process_post.py  setup.sh
tips/: 000_intro.md  001_bulkhead.md  002_instrument.md  003_annotate.md  003_structured_output.md  004_in_context_learning.md  004_structured_output.md  005_simple_rag.md  006_eval_rag.md  006_in_context_learning.md  007_annotate.md  007_in_context_learning.md  008_good_chunks.md  009_hybrid_search.md  010_rag_reranking.md  011_prompt_caching.md  012_clustered_few_shot.md  013_pure_pipelines.md  014_retry_error_reinsertion.md  015_warming.md  016_model_escalation.md  017_check_chunks.md  018_explicit_rejection.md  019_unambiguous_separators.md  020_retrieval_rates.md  021_task_decomposition.md  022_semantic_caching.md  023_self_consistency.md  024_vague_query_handling.md  025_ranking_boosting.md  026_output_guardrails.md  027_citation_validation.md  028_input_guardrails.md  029_record_replay.md  030_speculative_calls.md  031_streaming_responses.md  032_pii_masking.md  033_semantic_validators.md  034_gleaning.md  035_logit_bias.md  (+13 more)
