[project]
name = "tips"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lilypad-sdk>=0.1.0a35",
    "mirascope[anthropic,openai]>=1.22.4",
    "presidio-analyzer>=2.2.358",
    "presidio-anonymizer>=2.2.358",
    "pydantic[email,email-validator]>=2.11.4",
    "spacy>=3.8.7",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "pip>=25.1.1",
]
